--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,8 +1,45 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<GridPane fx:controller="sample.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
+
+<GridPane alignment="center" hgap="10" prefHeight="345.0" prefWidth="573.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+   <children>
+      <Label fx:id="loginLabel" prefHeight="23.0" prefWidth="139.0" text="Login" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="2">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <Label fx:id="benutzerLabel" text="Benutzer" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+      <Label fx:id="passwortLabel" text="Passwort" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+      <TextField fx:id="benutzerTextfield" prefHeight="27.0" prefWidth="112.0" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="4" />
+      <TextField fx:id="passwortTextfield" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="5" />
+      <Button fx:id="weiterButton" mnemonicParsing="false" onMouseClicked="#weiterButtonEvent" text="weiter" GridPane.columnIndex="5" GridPane.columnSpan="2" GridPane.rowIndex="9" />
+   </children>
+   <rowConstraints>
+      <RowConstraints minHeight="10.0" prefHeight="30.0" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" />
+      <RowConstraints />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" />
+   </rowConstraints>
+   <columnConstraints>
+      <ColumnConstraints minWidth="10.0" prefWidth="100.0" />
+      <ColumnConstraints minWidth="10.0" prefWidth="100.0" />
+      <ColumnConstraints maxWidth="76.0" minWidth="10.0" prefWidth="59.0" />
+      <ColumnConstraints maxWidth="82.0" minWidth="39.0" prefWidth="80.0" />
+      <ColumnConstraints maxWidth="95.0" minWidth="10.0" prefWidth="54.0" />
+      <ColumnConstraints maxWidth="95.0" minWidth="10.0" prefWidth="67.0" />
+      <ColumnConstraints maxWidth="95.0" minWidth="10.0" prefWidth="67.0" />
+   </columnConstraints>
 </GridPane>
