--- a/src/sample/benutzer.fxml
+++ b/src/sample/benutzer.fxml
@@ -2,26 +2,32 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" hgap="10" prefHeight="404.0" prefWidth="714.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<GridPane alignment="center" hgap="10" prefHeight="404.0" prefWidth="714.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.BenutzerController">
    <children>
-      <Label fx:id="loginLabel" prefHeight="23.0" prefWidth="139.0" text="Login" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="2">
+      <Label fx:id="BenutzerVerwaltungLabel" prefHeight="29.0" prefWidth="298.0" text="Benutzerverwaltung" GridPane.columnIndex="2" GridPane.columnSpan="4">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <Label fx:id="benutzerLabel" text="Benutzer" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-      <Label fx:id="passwortLabel" text="Passwort" GridPane.columnIndex="2" GridPane.rowIndex="5" />
-      <TextField fx:id="benutzerTextfield" prefHeight="27.0" prefWidth="112.0" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="4" />
-      <TextField fx:id="passwortTextfield" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="5" />
-      <Button fx:id="loginButton" mnemonicParsing="false" onMouseClicked="#loginButtonEvent" text="weiter" GridPane.columnIndex="6" GridPane.columnSpan="2" GridPane.rowIndex="9" />
+      <ListView fx:id="listviewTemplate" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.columnSpan="3" GridPane.rowIndex="2" GridPane.rowSpan="5" />
+      <TextField fx:id="benutzerNameTextfield" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+      <Label fx:id="benutzerNameLabel" text="Benutzername" GridPane.rowIndex="2" />
+      <Button fx:id="benutzerLoeschenButton" mnemonicParsing="false" onMouseClicked="#benutzerLoeschenButtonEvent" text="Benutzer löschen" GridPane.columnIndex="5" GridPane.columnSpan="2" GridPane.rowIndex="10" />
+      <Label fx:id="benutzerPasswortLabel" text="Passwort" GridPane.rowIndex="4" />
+      <TextField fx:id="benutzerPasswortTextfield" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+      <Button fx:id="benutzerHinzufuegenButton" mnemonicParsing="false" onMouseClicked="#benutzerHinzufuegenButtonEvent" text="Benutzer hinzufügen" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="10" />
+      <Button fx:id="zurueckButton" mnemonicParsing="false" onMouseClicked="#zurueckButtonEvent" text="zurück" GridPane.columnIndex="1" GridPane.rowIndex="10" />
    </children>
    <rowConstraints>
+      <RowConstraints minHeight="10.0" prefHeight="30.0" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" />
