--- a/src/resources/templateWindow.fxml
+++ b/src/resources/templateWindow.fxml
@@ -2,26 +2,28 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" hgap="10" prefHeight="404.0" prefWidth="714.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<GridPane alignment="center" hgap="10" prefHeight="404.0" prefWidth="714.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.hhbk.wizardpdfgen.view.TemplateView">
    <children>
-      <Label fx:id="loginLabel" prefHeight="23.0" prefWidth="139.0" text="Login" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="2">
+      <Label fx:id="templateLabel" prefHeight="29.0" prefWidth="298.0" text="Template-Generierung" GridPane.columnIndex="2" GridPane.columnSpan="4">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <Label fx:id="benutzerLabel" text="Benutzer" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-      <Label fx:id="passwortLabel" text="Passwort" GridPane.columnIndex="2" GridPane.rowIndex="5" />
-      <TextField fx:id="benutzerTextfield" prefHeight="27.0" prefWidth="112.0" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="4" />
-      <TextField fx:id="passwortTextfield" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="5" />
-      <Button fx:id="loginButton" mnemonicParsing="false" onMouseClicked="#loginButtonEvent" text="weiter" GridPane.columnIndex="6" GridPane.columnSpan="2" GridPane.rowIndex="9" />
+      <ListView fx:id="listviewTemplate" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="5" GridPane.rowIndex="2" GridPane.rowSpan="4" />
+      <TextField fx:id="TemplateNameTextfield" GridPane.columnIndex="2" GridPane.rowIndex="10" />
+      <Label fx:id="templateNameLabel" text="Templatename" GridPane.columnIndex="1" GridPane.rowIndex="10" />
+      <Button fx:id="templateGenerierenButton" mnemonicParsing="false" onMouseClicked="#TemplateGenerierenButtonEvent" text="Template generieren" GridPane.columnIndex="4" GridPane.columnSpan="2" GridPane.rowIndex="10" />
    </children>
    <rowConstraints>
+      <RowConstraints minHeight="10.0" prefHeight="30.0" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" />
