--- a/src/main/resources/de/hhbk/wizardpdfgen/view/UserAdminView.fxml
+++ b/src/main/resources/de/hhbk/wizardpdfgen/view/UserAdminView.fxml
@@ -16,7 +16,7 @@
             <Font size="24.0" />
          </font>
       </Label>
-      <ListView fx:id="listviewTemplate" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.columnSpan="3" GridPane.rowIndex="2" GridPane.rowSpan="5" />
+      <ListView fx:id="listviewBenutzer" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.columnSpan="3" GridPane.rowIndex="2" GridPane.rowSpan="5" />
       <TextField fx:id="benutzerNameTextfield" GridPane.columnIndex="1" GridPane.rowIndex="2" />
       <Label fx:id="benutzerNameLabel" text="Benutzername" GridPane.rowIndex="2" />
       <Button fx:id="benutzerLoeschenButton" mnemonicParsing="false" onMouseClicked="#benutzerLoeschenButtonEvent" text="Benutzer löschen" GridPane.columnIndex="5" GridPane.columnSpan="2" GridPane.rowIndex="10" />
