Added tranforming to pdf from html

--- a/src/main/resources/de/hhbk/wizardpdfgen/generator/report.mustache
+++ b/src/main/resources/de/hhbk/wizardpdfgen/generator/report.mustache
@@ -1,17 +1,15 @@
 <html>
 <head>
+    <link type="text/css" rel="stylesheet" href="src/main/resources/de/hhbk/wizardpdfgen/generator/foo.css"/>
     <style>
-        td:first-child:nth-last-child(3),
-        td:first-child:nth-last-child(3) ~ li {
-            width: 33.3333%;
+        body {
+            background-color: #0a6aa1;
         }
     </style>
 </head>
 <body>
 <h3>Detailanzeige</h3>
 <h4>Abteilung:</h4>
-<h4>:</h4>
-<h4>:</h4>
 <h4>Unterichtsform:</h4>
 <h4>Bildungsgangleitung:</h4>
 <table>
