Modularized Generator Class

--- a/src/main/resources/de/hhbk/wizardpdfgen/generator/report.mustache
+++ b/src/main/resources/de/hhbk/wizardpdfgen/generator/report.mustache
@@ -9,9 +9,11 @@
 </head>
 <body>
 <h3>Detailanzeige</h3>
-<h4>Abteilung:</h4>
-<h4>Unterichtsform:</h4>
-<h4>Bildungsgangleitung:</h4>
+<h4>Abteilung: {{abteilung}}</h4>
+<h4>Ausbildungsberuf: {{beruf}}</h4>
+<h4>Ausbildungsjahr: {{jahr}}</h4>
+<h4>Unterichtsform: {{unterrichtsform}}</h4>
+<h4>Bildungsgangleitung: {{anrede}} {{bildungsgangleitung}}</h4>
 <table>
     <tbody>
     {{#fachs}}
