--- a/src/main/resources/de/hhbk/wizardpdfgen/view/UserAdminView.fxml
+++ b/src/main/resources/de/hhbk/wizardpdfgen/view/UserAdminView.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
@@ -11,7 +12,7 @@
 
 <GridPane alignment="center" hgap="10" prefHeight="404.0" prefWidth="714.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.hhbk.wizardpdfgen.view.UserAdminView">
    <children>
-      <Label fx:id="BenutzerVerwaltungLabel" prefHeight="29.0" prefWidth="298.0" text="Benutzerverwaltung" GridPane.columnIndex="2" GridPane.columnSpan="4">
+      <Label fx:id="userAdminLabel" prefHeight="29.0" prefWidth="298.0" text="Benutzerverwaltung" GridPane.columnIndex="2" GridPane.columnSpan="4">
          <font>
             <Font size="24.0" />
          </font>
@@ -19,11 +20,13 @@
       <ListView fx:id="listviewUser" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.columnSpan="3" GridPane.rowIndex="2" GridPane.rowSpan="5" />
       <TextField fx:id="usernameTextfield" GridPane.columnIndex="1" GridPane.rowIndex="2" />
       <Label fx:id="usernameLabel" text="Benutzername" GridPane.rowIndex="2" />
-      <Button fx:id="deleteUserButton" mnemonicParsing="false" onMouseClicked="#benutzerLoeschenButtonEvent" text="Benutzer löschen" GridPane.columnIndex="5" GridPane.columnSpan="2" GridPane.rowIndex="10" />
+      <Button fx:id="deleteUserButton" mnemonicParsing="false" onMouseClicked="#deleteUserButtonEvent" text="Benutzer löschen" GridPane.columnIndex="5" GridPane.columnSpan="2" GridPane.rowIndex="10" />
       <Label fx:id="passwordLabel" text="Passwort" GridPane.rowIndex="4" />
       <TextField fx:id="passwordTextfield" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-      <Button fx:id="addUserButton" mnemonicParsing="false" onMouseClicked="#benutzerHinzufuegenButtonEvent" text="Benutzer hinzufügen" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="10" />
+      <Button fx:id="addUserButton" mnemonicParsing="false" onMouseClicked="#addUserButtonEvent" text="Benutzer hinzufügen" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="10" />
       <Button fx:id="exitButton" mnemonicParsing="false" onMouseClicked="#zurueckButtonEvent" text="zurück" GridPane.columnIndex="1" GridPane.rowIndex="10" />
+      <ComboBox fx:id="userAuthoristaionComboBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+      <Label fx:id="userAuthoristaionLabel" text="Autorisierung" GridPane.rowIndex="6" />
    </children>
    <rowConstraints>
       <RowConstraints minHeight="10.0" prefHeight="30.0" />
